chore: add workspace dependencies for bagua-types and bagua-engine

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,5 @@ debug-assertions = false
 incremental = false
 
 [workspace.dependencies]
+bagua-types = { path = "./bagua-types" }
+bagua-engine = { path = "./bagua-engine" }
