--- a/bagua-types/Cargo.toml
+++ b/bagua-types/Cargo.toml
@@ -8,3 +8,6 @@ license-file.workspace = true
 repository.workspace = true
 
 [dependencies]
+chrono = { workspace = true }
+serde = { workspace = true }
+ringbuffer = { workspace = true }
