chore: update .gitignore, add dependencies to Cargo.toml, and modify CI workflow
- Expanded .gitignore to include various Python and build artifacts.
- Added new dependencies in Cargo.lock and updated Cargo.toml to include 'bagua-python-sdk' and 'pyo3'.
- Modified CI workflow to trigger on pull requests to the main branch instead of on push.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,11 @@
 [workspace]
-members = ["bagua-engine", "bagua-exchange", "bagua-helpers", "bagua-types"]
+members = [
+    "bagua-engine",
+    "bagua-exchange",
+    "bagua-helpers",
+    "bagua-types",
+    "bagua-python-sdk",
+]
 resolver = "2"
 
 [workspace.package]
@@ -41,3 +47,4 @@ snowflaked = { version = "1", features = ["sync"] }
 async-trait = { version = "0" }
 parking_lot = { version = "0" }
 ringbuffer = { version = "0" }
+pyo3 = { version = "0.23", features = ["full"] }
