--- a/.github/workflows/python-wheel.yml
+++ b/.github/workflows/python-wheel.yml
@@ -26,6 +26,7 @@ jobs:
           args: -m bagua-python-sdk/Cargo.toml --release --out dist --find-interpreter
           sccache: 'true'
           manylinux: auto
+          rust-toolchain: nightly
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
@@ -51,6 +52,7 @@ jobs:
           args: -m bagua-python-sdk/Cargo.toml --release --out dist --find-interpreter
           sccache: 'true'
           manylinux: musllinux_1_2
+          rust-toolchain: nightly
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
@@ -76,6 +78,7 @@ jobs:
           target: ${{ matrix.platform.target }}
           args: -m bagua-python-sdk/Cargo.toml --release --out dist --find-interpreter
           sccache: 'true'
+          rust-toolchain: nightly
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
@@ -102,6 +105,7 @@ jobs:
           target: ${{ matrix.platform.target }}
           args: -m bagua-python-sdk/Cargo.toml --release --out dist --find-interpreter
           sccache: 'true'
+          rust-toolchain: nightly
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
