--- a/bagua-helpers/Cargo.toml
+++ b/bagua-helpers/Cargo.toml
@@ -8,3 +8,7 @@ license-file.workspace = true
 repository.workspace = true
 
 [dependencies]
+chrono = { workspace = true }
+anyhow = { workspace = true }
+uuid = { workspace = true }
+homedir = { workspace = true }
