--- a/bagua-engine/Cargo.toml
+++ b/bagua-engine/Cargo.toml
@@ -8,3 +8,6 @@ license-file.workspace = true
 repository.workspace = true
 
 [dependencies]
+bagua-exchange = { path = "../bagua-exchange" }
+bagua-helpers = { path = "../bagua-helpers" }
+bagua-types = { path = "../bagua-types" }
