--- a/bagua-exchange/Cargo.toml
+++ b/bagua-exchange/Cargo.toml
@@ -8,5 +8,9 @@ license-file.workspace = true
 repository.workspace = true
 
 [dependencies]
-bagua-types = { workspace = true }
 bagua-helpers = { workspace = true }
+bagua-types = { workspace = true }
+async-trait = { workspace = true }
+anyhow = { workspace = true }
+chrono = { workspace = true }
+tokio = { workspace = true }
