feat(bagua-engine): initialize engine module structure
- Added initial module structure for bagua-engine
- Created prelude, traits, and engine modules
- Updated Cargo.toml with dependencies for async handling, error management, and time utilities
- Modified EventType enum in bagua-types to include OnLeverage event

--- a/bagua-engine/Cargo.toml
+++ b/bagua-engine/Cargo.toml
@@ -11,3 +11,7 @@ repository.workspace = true
 bagua-exchange = { path = "../bagua-exchange" }
 bagua-helpers = { path = "../bagua-helpers" }
 bagua-types = { path = "../bagua-types" }
+anyhow = { workspace = true }
+tokio = { workspace = true }
+async-trait = { workspace = true }
+chrono = { workspace = true }
