chore(bagua-python-sdk): bump version to 1.0.0 and use workspace configuration
- Updated version from 0.1.0 to 1.0.0
- Migrated to use workspace-level configuration for package metadata
- Simplified Cargo.toml by referencing workspace settings

--- a/bagua-python-sdk/Cargo.toml
+++ b/bagua-python-sdk/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "bagua-python-sdk"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+authors.workspace = true
+description.workspace = true
+edition.workspace = true
+license-file.workspace = true
+repository.workspace = true
 
 [lib]
 name = "bagua"
