refactor: remove bagua-exchange package and update project structure
- Removed entire bagua-exchange package
- Updated Cargo.toml workspace members to exclude bagua-exchange
- Removed exchange-related dependencies and references
- Simplified traits and models by removing exchange-specific metadata
- Removed logo from README
- Reorganized event handling in bagua-engine traits

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,5 @@
 [workspace]
-members = [
-    "bagua-engine",
-    "bagua-exchange",
-    "bagua-helpers",
-    "bagua-types",
-    "bagua-python-sdk",
-]
+members = ["bagua-engine", "bagua-helpers", "bagua-types", "bagua-python-sdk"]
 resolver = "2"
 
 [workspace.package]
@@ -30,7 +24,6 @@ incremental = false
 
 [workspace.dependencies]
 bagua-engine = { path = "./bagua-engine" }
-bagua-exchange = { path = "./bagua-exchange" }
 bagua-helpers = { path = "./bagua-helpers" }
 bagua-python-sdk = { path = "./bagua-python-sdk" }
 bagua-types = { path = "./bagua-types" }
