--- a/bagua-python-sdk/pyproject.toml
+++ b/bagua-python-sdk/pyproject.toml
@@ -11,6 +11,7 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version", "readme"]
+dependencies = ["boto3==1.36.6"]
 
 [tool.maturin]
 features = ["pyo3/extension-module"]
